# corun-mcp-server

./: .gitignore  AGENTS.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
src/corun_mcp_server/: __init__.py  client.py  jobs.py  resources.py  server.py
tests/: conftest.py  test_client.py  test_jobs.py  test_resources.py  test_server.py
