[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corun-mcp-server"
version = "0.1.0"
description = "MCP server providing LLM clients read/write access to a corun-ai instance"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
corun-mcp-server = "corun_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/corun_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.coverage.run]
source = ["corun_mcp_server"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
